GitLabAPI/GitLabAPI/src/objects/Goods__c.object
<CustomObject>
    <fields>
        <fullName>Added_Date__c</fullName>
        <label>Added Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Laptops</fullName>
                    <default>true</default>
                    <label>Laptops</label>
                </value>
                <value>
                    <fullName>Phones</fullName>
                </value>
                <value>
                    <fullName>Tablets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Goods</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Goods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Name_protect</fullName>
        <active>false</active>
        <errorConditionFormula>Name == NULL</errorConditionFormula>
        <errorMessage>Name is required fild</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidRule</fullName>
        <active>true</active>
        <errorConditionFormula>Added_Date__c  &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>Added_Date__c</errorDisplayField>
        <errorMessage>Error: Can&apos;t specify a past date</errorMessage>
    </validationRules>
</CustomObject>